--- a/app/src/main/res/drawable/btn_list_song.xml
+++ b/app/src/main/res/drawable/btn_list_song.xml
@@ -3,10 +3,10 @@
 
 
     <item
-        android:drawable="@drawable/ic_list_song"
+        android:drawable="@drawable/ic_sort_title"
         android:state_pressed="false"
         android:state_selected="false"/>
 
-    <item android:drawable="@drawable/ic_list_song_press"
+    <item android:drawable="@drawable/ic_sort_title_pressed"
           android:state_pressed="true"/>
 </selector>
