--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -11,9 +11,9 @@
                     android:padding="5dp">
 
         <ImageView android:id="@+id/ivIcon"
-                   android:layout_width="48dp"
-                   android:layout_height="48dp"
-                   android:src="@drawable/hiphop"/>
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_local"/>
         <TextView android:id="@+id/tvNameTypeSong"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
